added t-SNE-based test

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
 			  <artifactId>logback-core</artifactId>
 		  </dependency>
 
+		  <dependency>
+			  <groupId>com.github.lejon</groupId>
+			  <artifactId>T-SNE-JAVA</artifactId>
+			  <version>v2.5.0</version>
+		  </dependency>
+
 	  </dependencies>
 
 	  <build>
@@ -239,5 +245,12 @@
 
 		  </plugins>
 	  </build>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
   </project>
